--- a/my-calendar/index.html
+++ b/my-calendar/index.html
@@ -12,7 +12,7 @@
 
   <h2>方式一：下載 .ics 檔</h2>
   <p>
-    👉 <a href="lunar_god_festivals2.ics" download>點此下載 calendar.ics</a><br />
+    👉 <a href="./lunar_god_festivals2.ics" download>點此下載 calendar.ics</a><br />
     下載後可手動匯入至 Google 日曆或其他行事曆
   </p>
 
