--- a/my-calendar/index.html
+++ b/my-calendar/index.html
@@ -12,14 +12,14 @@
 
   <h2>方式一：下載 .ics 檔</h2>
   <p>
-    👉 <a href="./lunar_god_festivals2.ics" download>點此下載 calendar.ics</a><br />
+    👉 <a href="calendar.ics" download>點此下載 calendar.ics</a><br />
     下載後可手動匯入至 Google 日曆或其他行事曆
   </p>
 
   <h2>方式二：訂閱（iOS / Mac / Outlook）</h2>
   <p>
     若你使用 iPhone / Mac / Outlook，請複製以下網址進行「訂閱」<br/>
-    <code>https://nola-id.github.io/calendar.github.io/my-calendar/lunar_god_festivals2.ics</code><br/>
+    <code>https://nola-id.github.io/calendar.github.io/my-calendar/calendar.ics</code><br/>
 <!--     <small>（此網址請換成你實際的 GitHub Pages 網址）</small> -->
   </p>
 </body>
