--- a/my-calendar/index.html
+++ b/my-calendar/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>采真的行事曆</title>
+  <title>行事曆</title>
 </head>
 <body>
-  <h1>📅 采真的行事曆</h1>
+  <h1>📅 測試的行事曆</h1>
 
   <p>你可以以下列兩種方式將我的行事曆加入你的裝置：</p>
 
@@ -20,7 +20,22 @@
   <p>
     若你使用 iPhone / Mac / Outlook，請複製以下網址進行「訂閱」<br/>
     <code>https://nola-id.github.io/calendar.github.io/my-calendar/calendar.ics</code><br/>
-<!--     <small>（此網址請換成你實際的 GitHub Pages 網址）</small> -->
+  </p>
+<hr>
+  <h1>📅 神明的行事曆</h1>
+
+  <p>你可以以下列兩種方式將我的行事曆加入你的裝置：</p>
+
+  <h2>方式一：下載 .ics 檔</h2>
+  <p>
+    👉 <a href="lunar_god_festivals2.ics" download>點此下載ics檔</a><br />
+    下載後可手動匯入至 Google 日曆或其他行事曆
+  </p>
+
+  <h2>方式二：訂閱（iOS / Mac / Outlook）</h2>
+  <p>
+    若你使用 iPhone / Mac / Outlook，請複製以下網址進行「訂閱」<br/>
+    <code>https://nola-id.github.io/calendar.github.io/my-calendar/lunar_god_festivals2.ics</code><br/>
   </p>
 </body>
 </html>
