--- a/my-calendar/index.html
+++ b/my-calendar/index.html
@@ -6,6 +6,8 @@
   <title>行事曆</title>
 </head>
 <body>
+  👉 <a href="mainpage.html" >點此看美化頁面</a><br />
+  
   <h1>📅 測試的行事曆</h1>
 
   <p>你可以以下列兩種方式將我的行事曆加入你的裝置：</p>
