--- a/my-calendar/index.html
+++ b/my-calendar/index.html
@@ -325,6 +325,9 @@
       </h2>
       <p style="font-size: 1.1rem; color: #666; margin-bottom: 30px; text-align: center;">
         收錄九位神明誕辰、傳統節慶及重要祭典日期，讓您不錯過任何重要的拜拜時機
+      </p>
+      <br/>
+      <p style="font-size: 1rem; color: #666; margin-bottom: 25px; text-align: center;">
         (萬教帝君誕辰、濟公師父誕辰、福德正神誕辰、觀音誕辰、天上聖母誕辰、五路武財神誕辰、觀音成道日、關聖帝君誕辰、玉二聖母誕辰、中壇元帥誕辰、觀音出家日)
       </p>
       
