--- a/my-calendar/index.html
+++ b/my-calendar/index.html
@@ -315,7 +315,7 @@
   <div class="container">
     <div class="header">
       <h1>🏮 神明行事曆 🏮</h1>
-      <p>台灣傳統節慶與神明誕辰日曆 - 弘揚傳統文化，傳承民俗智慧</p>
+      <p>台灣傳統節慶與神明誕辰日曆</p>
     </div>
 
     <div class="calendar-section deity-calendar">
@@ -326,9 +326,10 @@
       <p style="font-size: 1.1rem; color: #666; margin-bottom: 30px; text-align: center;">
         收錄九位神明誕辰、傳統節慶及重要祭典日期，讓您不錯過任何重要的拜拜時機
       </p>
-      <br/>
       <p style="font-size: 1rem; color: #666; margin-bottom: 25px; text-align: center;">
-        (萬教帝君誕辰、濟公師父誕辰、福德正神誕辰、觀音誕辰、天上聖母誕辰、五路武財神誕辰、觀音成道日、關聖帝君誕辰、玉二聖母誕辰、中壇元帥誕辰、觀音出家日)
+        (萬教帝君誕辰、濟公師父誕辰、福德正神誕辰、觀音誕辰、天上聖母誕辰、五路武財神誕辰) 
+        <br/>
+        (觀音成道日、關聖帝君誕辰、玉二聖母誕辰、中壇元帥誕辰、觀音出家日)
       </p>
       
       <div class="download-section">
